# gazelle:prefix k8s.io/test-infra
# gazelle:proto disable_global
# gazelle:exclude vendor/k8s.io/code-generator/_examples/

load("@io_kubernetes_build//defs:run_in_workspace.bzl", "workspace_binary")

workspace_binary(
    name = "go",
    cmd = "@go_sdk//:bin/go",
)

workspace_binary(
    name = "update-minor",
    args = [
        "get",
        "-u",
    ],
    cmd = "@go_sdk//:bin/go",
)

workspace_binary(
    name = "update-patch",
    args = [
        "get",
        "-u=patch",
    ],
    cmd = "@go_sdk//:bin/go",
)

workspace_binary(
    name = "gofmt",
    cmd = "@go_sdk//:bin/gofmt",
)

workspace_binary(
    name = "govet",
    args = ["vet"],
    cmd = "@go_sdk//:bin/go",
)

workspace_binary(
    name = "golint",
    cmd = "@com_github_golang_lint//golint",
)

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    command = "fix",
    external = "vendored",
)

gazelle(
    name = "gazelle-diff",
    command = "fix",
    external = "vendored",
    mode = "diff",
)

workspace_binary(
    name = "kazel",
    args = [
        "--cfg-path=./hack/.kazelcfg.json",
    ],
    cmd = "@io_kubernetes_build//kazel",
)

workspace_binary(
    name = "kazel-diff",
    args = [
        "--dry-run",
        "--print-diff",
        "--cfg-path=./hack/.kazelcfg.json",
    ],
    cmd = "@io_kubernetes_build//kazel",
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
            "*.db",
            "*.gz",
        ],
    ),
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//boskos:all-srcs",
        "//config:all-srcs",
        "//def:all-srcs",
        "//experiment:all-srcs",
        "//gcsweb/cmd/gcsweb:all-srcs",
        "//gcsweb/pkg/version:all-srcs",
        "//ghproxy:all-srcs",
        "//gopherage:all-srcs",
        "//greenhouse:all-srcs",
        "//hack:all-srcs",
        "//images/bootstrap/barnacle:all-srcs",
        "//jenkins:all-srcs",
        "//jobs:all-srcs",
        "//kettle:all-srcs",
        "//kubetest:all-srcs",
        "//label_sync:all-srcs",
        "//logexporter/cmd:all-srcs",
        "//maintenance/aws-janitor:all-srcs",
        "//maintenance/migratestatus:all-srcs",
        "//metrics:all-srcs",
        "//pkg/flagutil:all-srcs",
        "//pkg/ghclient:all-srcs",
        "//prow:all-srcs",
        "//robots/commenter:all-srcs",
        "//robots/coverage:all-srcs",
        "//robots/issue-creator:all-srcs",
        "//robots/pr-creator:all-srcs",
        "//robots/pr-labeler:all-srcs",
        "//scenarios:all-srcs",
        "//testgrid:all-srcs",
        "//traiana:all-srcs",
        "//triage:all-srcs",
        "//velodrome:all-srcs",
        "//vendor:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

exports_files(["tsconfig.json"])
