package(default_visibility = ["//visibility:public"])

load("//def:image.bzl", "tags")
load("//prow:def.bzl", "prow_image", "prow_push")
load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_binary",
    "go_library",
    "go_test",
)

go_binary(
    name = "boskos",
    embed = [":go_default_library"],
    pure = "on",
)

prow_image(
    name = "image",
    visibility = ["//visibility:public"],
)

prow_push(
    name = "push",
    images = tags(targets = {
        "{STABLE_PROW_REPO}/boskos/aws-janitor": "//maintenance/aws-janitor:image",
        "{STABLE_PROW_REPO}/boskos/boskos": "//boskos:image",
        "{STABLE_PROW_REPO}/boskos/fake-mason": "//boskos/mason/fake-mason:image",
        "{STABLE_PROW_REPO}/boskos/cleaner": "//boskos/cleaner/cmd:image",
        "{STABLE_PROW_REPO}/boskos/janitor": "//boskos/janitor:image",
        "{STABLE_PROW_REPO}/boskos/metrics": "//boskos/metrics:image",
        "{STABLE_PROW_REPO}/boskos/reaper": "//boskos/reaper:image",
        "{STABLE_PROW_REPO}/boskos/cli": "//boskos/cmd/cli:image",
    }),
)

go_test(
    name = "go_default_test",
    srcs = [
        "boskos_test.go",
        "server_client_test.go",
        "storage_test.go",
    ],
    data = [":testdata"],
    embed = [":go_default_library"],
    deps = [
        "//boskos/client:go_default_library",
        "//boskos/common:go_default_library",
        "//boskos/crds:go_default_library",
        "//boskos/ranch:go_default_library",
        "//boskos/storage:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["boskos.go"],
    importpath = "k8s.io/test-infra/boskos",
    deps = [
        "//boskos/common:go_default_library",
        "//boskos/crds:go_default_library",
        "//boskos/ranch:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

filegroup(
    name = "testdata",
    srcs = [
        "resources.yaml",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//boskos/cleaner:all-srcs",
        "//boskos/client:all-srcs",
        "//boskos/cmd/cli:all-srcs",
        "//boskos/common:all-srcs",
        "//boskos/crds:all-srcs",
        "//boskos/janitor:all-srcs",
        "//boskos/mason:all-srcs",
        "//boskos/metrics:all-srcs",
        "//boskos/ranch:all-srcs",
        "//boskos/reaper:all-srcs",
        "//boskos/storage:all-srcs",
    ],
    tags = ["automanaged"],
)
