load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/test-infra/coverage",
    visibility = ["//visibility:private"],
    deps = [
        "//coverage/artifacts:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_binary(
    name = "coverage",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "test-input",
    srcs = glob([
        "testdata/artifacts/**",
        "testdata/**",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "test-target",
    srcs = glob([
        "testTarget/presubmit/**",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//coverage/_testTarget/presubmit:all-srcs",
        "//coverage/_testTarget/subPkg1:all-srcs",
        "//coverage/_testTarget/subPkg2:all-srcs",
        "//coverage/_testTarget/targetPkgs_postsubmit:all-srcs",
        "//coverage/artifacts:all-srcs",
        "//coverage/io:all-srcs",
        "//coverage/test:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
