filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//def/configmap:all-srcs",
        "//def/secret:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
