load("@py_deps//:requirements.bzl", "requirement")

py_binary(
    name = "flakedetector",
    srcs = ["flakedetector.py"],
    python_version = "PY3",
    deps = [requirement("requests")],
)

py_binary(
    name = "generate_tests",
    srcs = ["generate_tests.py"],
    data = [
        "test_config.yaml",
        "//config:prowjobs",
        "//config:testgrids",
        "//jobs",
        "//prow:configs",
    ],
    python_version = "PY3",
    deps = [requirement("ruamel.yaml")],
)

py_binary(
    name = "fix_testgrid_config",
    srcs = ["fix_testgrid_config.py"],
    data = [
        "//config:testgrids",
    ],
    deps = [requirement("ruamel.yaml")],
)

py_binary(
    name = "prepare_release_branch",
    srcs = ["prepare_release_branch.py"],
    args = [
        "$(location //experiment/config-rotator)",
        "$(location //experiment/config-forker)",
        "$(location :generate_tests)",
        "$(location //config/jobs/kubernetes-security:genjobs)",
    ],
    data = [
        ":generate_tests",
        "//config/jobs/kubernetes-security:genjobs",
        "//experiment/config-forker",
        "//experiment/config-rotator",
    ],
    python_version = "PY3",
    deps = [
        requirement("ruamel.yaml"),
        requirement("sh"),
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//experiment/add-hook:all-srcs",
        "//experiment/autobumper:all-srcs",
        "//experiment/aws-stockout:all-srcs",
        "//experiment/ci-janitor:all-srcs",
        "//experiment/config-forker:all-srcs",
        "//experiment/config-rotator:all-srcs",
        "//experiment/coverage:all-srcs",
        "//experiment/dummybenchmarks:all-srcs",
        "//experiment/image-bumper:all-srcs",
        "//experiment/logviewer/gcsreader:all-srcs",
        "//experiment/manual-trigger:all-srcs",
        "//experiment/resultstore:all-srcs",
        "//experiment/slack-oncall-updater:all-srcs",
        "//experiment/tracer:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
