load("@py_deps//:requirements.bzl", "requirement")

py_binary(
    name = "flakedetector",
    srcs = ["flakedetector.py"],
    python_version = "PY3",
    deps = [requirement("requests")],
)

py_binary(
    name = "prepare_release_branch",
    srcs = ["prepare_release_branch.py"],
    args = [
        "$(location //experiment/config-rotator)",
        "$(location //experiment/config-forker)",
        "$(location //experiment/generate_tests)",
    ],
    data = [
        "//experiment/config-forker",
        "//experiment/config-rotator",
        "//experiment/generate_tests",
    ],
    python_version = "PY3",
    deps = [
        requirement("ruamel.yaml"),
        requirement("sh"),
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//experiment/add-hook:all-srcs",
        "//experiment/autobumper:all-srcs",
        "//experiment/aws-stockout:all-srcs",
        "//experiment/ci-janitor:all-srcs",
        "//experiment/cluster-upgrader:all-srcs",
        "//experiment/config-forker:all-srcs",
        "//experiment/config-rotator:all-srcs",
        "//experiment/coverage:all-srcs",
        "//experiment/dummybenchmarks:all-srcs",
        "//experiment/generate_tests:all-srcs",
        "//experiment/image-bumper:all-srcs",
        "//experiment/logviewer/gcsreader:all-srcs",
        "//experiment/manual-trigger:all-srcs",
        "//experiment/resultstore:all-srcs",
        "//experiment/service-account-creator:all-srcs",
        "//experiment/slack-oncall-updater:all-srcs",
        "//experiment/tracer:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
