load("@py3_deps//:requirements.bzl", "requirement")

py_binary(
    name = "flakedetector",
    srcs = ["flakedetector.py"],
    python_version = "PY3",
    deps = [requirement("requests")],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//experiment/autobumper:all-srcs",
        "//experiment/aws-stockout:all-srcs",
        "//experiment/ci-janitor:all-srcs",
        "//experiment/cluster-upgrader:all-srcs",
        "//experiment/coverage:all-srcs",
        "//experiment/dummybenchmarks:all-srcs",
        "//experiment/image-bumper:all-srcs",
        "//experiment/logviewer/gcsreader:all-srcs",
        "//experiment/manual-trigger:all-srcs",
        "//experiment/prowjob-report:all-srcs",
        "//experiment/service-account-creator:all-srcs",
        "//experiment/slack-oncall-updater:all-srcs",
        "//experiment/update-hook:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
