package(default_visibility = ["//visibility:public"])

filegroup(
    name = "icons",
    srcs = glob(["icons/**/*"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "styles",
    srcs = glob(["styles/**/*"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//gcsweb/cmd/gcsweb:all-srcs",
        "//gcsweb/pkg/version:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
