package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//docker:docker.bzl", "docker_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

docker_bundle(
    name = "bundle",
    images = {
        "{STABLE_DOCKER_REPO}/ghproxy:{DOCKER_TAG}": ":image",
        "{STABLE_DOCKER_REPO}/ghproxy:latest": ":image",
        "{STABLE_DOCKER_REPO}/ghproxy:latest-{BUILD_USER}": ":image",
    },
    stamp = True,
)

docker_push(
    name = "push",
    bundle = ":bundle",
)

go_image(
    name = "image",
    base = "@alpine-base//image",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["ghproxy.go"],
    importpath = "k8s.io/test-infra/ghproxy",
    visibility = ["//visibility:private"],
    deps = [
        "//ghproxy/ghcache:go_default_library",
        "//greenhouse/diskutil:go_default_library",
        "//prow/logrusutil:go_default_library",
        "//prow/metrics:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_binary(
    name = "ghproxy",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//ghproxy/ghcache:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
