package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//prow:def.bzl", "prow_image", "prow_push")

go_binary(
    name = "ghproxy",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

prow_push(
    name = "push",
    images = {
        "{STABLE_DOCKER_REPO}/ghproxy:{DOCKER_TAG}": ":image",
        "{STABLE_DOCKER_REPO}/ghproxy:latest": ":image",
        "{STABLE_DOCKER_REPO}/ghproxy:latest-{BUILD_USER}": ":image",
    },
)

prow_image(
    name = "image",
    base = "@alpine-base//image",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["ghproxy.go"],
    importpath = "k8s.io/test-infra/ghproxy",
    visibility = ["//visibility:private"],
    deps = [
        "//ghproxy/ghcache:go_default_library",
        "//greenhouse/diskutil:go_default_library",
        "//prow/logrusutil:go_default_library",
        "//prow/metrics:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//ghproxy/ghcache:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
